# quants-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CUSTOM.md  Dockerfile  Makefile  README.md  cli.py  compose-db.yml  compose-tasks.yml  docker-compose-db.yml  docker-compose-hbot.yml  docker-compose-task-runner.yml  docker-compose-tasks.yml  docker-compose.yml  environment.yml  hummingbot  install.sh  main.py  out.txt  pyproject.toml  quants-view.py  run_tasks.py  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: __init__.py
backtesting/: backtesting.py
backtests/: ma_cross.py  ma_cross_wfo.py  market_maker.py  ticks.py
blackbook/: alice2a.py
conf/: conf_client.yml
config/: .gitignore  ai_livestream.yml  brigado.yml  cohort-12.yml  coint_v2_config.yml  cointegration_deploy.yml  database.yml  meteora-pool-report.yml  notifiers.yml  tasks.yml  template_1_candles_optimization.yml  template_2_candles_pools_screener.yml  template_3_periodic_reports.yml  template_4_notebook_execution.yml  tf_pipeline.yml
controllers/directional_trading/: bollinger_v1.py  bollinger_v2.py  coin_glass_controller.py  coin_glass_data_provider.py  dman_v3.py  macd_bb_v1.py  models.py  peinjo.py  raj_reversion.py  rsi_mutitimeframe.py  smugplug.py  supertrend_v1.py  trend_example.py  trend_fury.py  whiterabbit_v1.py  xgridt.py  xtreet_bb.py
controllers/generic/: grid_strike.py  stat_arb.py
controllers/market_making/: dman_maker_v2.py  pmm_dynamic.py  pmm_simple.py
core/: data_paths.py  database_manager.py  task_base.py  task_runner.py  theme.py  utils.py
core/backtesting/: __init__.py  engine.py  optimizer.py  position_executor_patch.py  triple_barrier_method.py
core/data_sources/: __init__.py  clob.py  gateway.py  hummingbot_database.py  solana.py
core/data_structures/: backtesting_result.py  candles.py  controller_performance.py  data_structure_base.py  hummingbot_database.py  trading_rules.py
core/features/: __init__.py  feature_base.py  models.py  storage.py
core/machine_learning/: features.py  model_config.py  triple_barrier_analyser.py  utils.py  utils_original.py
core/notifiers/: __init__.py  base.py  discord.py  email.py  manager.py  slack.py  telegram.py
core/performance/: models.py  performance_report.py
core/services/: backend_api_client.py  client_base.py  coin_glass_data_client.py  gateway_client.py  larp_client.py  mongodb_client.py  okx_dex_api.py  timescale_client.py
core/tasks/: __init__.py  api.py  base.py  orchestrator.py  registry.py  runner.py  storage.py
data_handler/: data_handler_base.py  ohlc.py  trading_rules.py
data_sources/: clob.py  market_data.py
data_structures/: backtesting_result.py  candles.py  data_handler_base.py  trading_rules.py
features/: feature_base.py  volatility.py
features/candles/: peak_analyzer.py  trend.py  volatility.py  volume.py
history/: codex.py  download-finam.py  download-yf.py  plot-csv.py  plot-klines.py  setup_codex_env.sh
history/binance-futures/: README.md
history/yf/: assets.csv.demo
lab/: local_pmm_simple_backtest.py
misc/: benchmark_polaris.py  benchmark_sma.py  compare.py  dump.py  gen_sine.py  gen_sine2.py  trade_cmp.py
nexus/: TODO.md  asset.py  charting.py  event.py  helpers.py  monte_carlo.py  position.py  pyproject.toml
nexus/backtests/: counter_trend.py  ma_cross_optimize.py  ma_cross_portfolio.py
nexus/blackbook/: alice1a.py
nexus/docs/: index.md
nexus/feed/: csv_ohlc.py  csv_tick.py  klines.py  t6.py
nexus/history/: codex.py
nexus/indicators/: _cython_indicators.pyx  bandpass.py  ehlers.py  fisher.py  indicators.py
nexus/nexus/: backtest.py  logger.py  performance.py
nexus/notebooks/: local_pmm_simple_backtest.py
nexus/strategy/: counter_trend.py  ma_cross.py
prompts/: WFO.md  forex.md  main.md
research_notebooks/: analyze_optimization_results.ipynb  get_top_backesting_results.ipynb
research_notebooks/XGridT/: 01_strategy_design.ipynb  02_single_controller_backtest.ipynb  03_optimization_notebook.ipynb
research_notebooks/dman_v3/: utils.py  (+1 more)
scripts/: cleanup_tasks.py  download_order_book_and_trades.py
services/: backend_api_client.py  timescale_client.py
strategy/: market_maker.py
tasks/: backtesting_runner.py  candles_downloader_runner.py  coin_glass_data_downloader_runner.py  data_generation_runner.py  db_status_runner.py  metrics_report_runner.py  report_runner.py  screener_runner.py  task_runner.py  trades_downloader_runner.py  triple_barrier_analyser_runner.py  xgridt_bt_runner.py
tests/: test_cython_indicators.py  test_execution_handler.py  test_indicators.py  test_portfolio.py
visualization/: backtesting.py  theme.py
(+307 files in other folders)
