[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
description = "An python based algorithmic trading event driven framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binance-futures-connector>=4.1.0",
    "cython>=3.1.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
