[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quants-lab"
version = "2.0.0"
description = "Quantitative research framework for Hummingbot trading strategies"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "QuantsLab Team", email = "team@quantslab.io"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hummingbot",
    "pycoingecko",
    "geckoterminal-py==0.2.5",
    "glom",
    "defillama",
    "statsmodels",
    "numpy",
    "pandas",
    "plotly",
    "scikit-learn",
    "pydantic",
    "pyyaml",
    "optuna",
    "optuna-dashboard",
    "streamlit",
    "python-dotenv",
    "asyncpg",
    "psycopg2-binary",
    "pyarrow",
    "motor>=3.3.2",
    "fastapi",
    "uvicorn[standard]",
    "croniter",
    "pytz",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "isort",
    "flake8",
    "jupyter",
]

[project.scripts]
quants-lab = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "app*"]

[tool.black]
line-length = 130
target-version = ["py312"]

[tool.isort]
line_length = 130
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true

[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v3.4.0", hooks = [{ id = "check-yaml" }, { id = "end-of-file-fixer" }] },
    { repo = "https://github.com/psf/black", rev = "21.6b0", hooks = [{ id = "black" }] },
    { repo = "https://github.com/pre-commit/mirrors-isort", rev = "v5.9.3", hooks = [{ id = "isort" }] }
]
